--- a/ex-26/mq005/index.html
+++ b/ex-26/mq005/index.html
@@ -11,6 +11,7 @@
 </head>
 <body onresize="mudouTamanho()">
     <header>
+        <img src="logo-eriton-sousa.png" alt="logotipo">
         <h1>Meu Site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         <menu id="itens">
