testando o color active

--- a/site/index.html
+++ b/site/index.html
@@ -23,10 +23,18 @@
         </menu>
     </header> 
     <script>
+
+        function clickMenu(){
+            if (itens.style.background = 'rgb(0, 162, 255'){
+                itens.style.background = '#0656e0'
+            } 
+        }
+            
+
         function clickMenu(){
             if(itens.style.display == 'block'){
                 itens.style.display = 'none'
-            } else {
+            }  else {
                 itens.style.display = 'block'
             }
         }
