--- a/site/index.html
+++ b/site/index.html
@@ -22,6 +22,9 @@
             </ul>
         </menu>
     </header> 
+    <main>
+        <!--<img src="imagens/banner-mobile.jpg" alt="banner-web">-->
+    </main>
     <script>
 
         function clickMenu(){
@@ -32,7 +35,7 @@
                 itens.style.display = 'block'
             }
         }
-        
+
     </script>   
 </body>
 </html>
