capa quase concluída

--- a/site/index.html
+++ b/site/index.html
@@ -23,7 +23,7 @@
         </menu>
     </header> 
     <main>
-        <!--<img src="imagens/banner-mobile.jpg" alt="banner-web">-->
+        <h1>Sua empresa no topo</h1>
     </main>
     <script>
 
