--- a/site/index.html
+++ b/site/index.html
@@ -23,7 +23,7 @@
         </menu>
     </header> 
     <main>
-        <h1>Sua empresa no topo!</h1>
+        <h1>SUA MARCA NO TOPO!</h1>
         <p> <a href="#">AGENDAR REUNIÃO</a> </p>
     </main>
     <script>
