--- a/site/index.html
+++ b/site/index.html
@@ -22,10 +22,14 @@
             </ul>
         </menu>
     </header> 
-    <main>
+    <div id="principal">
         <h1>SUA MARCA NO TOPO!</h1>
         <p> <a href="#">AGENDAR REUNIÃO</a> </p>
-    </main>
+    </div>
+    <div id="segunda">
+        <img id="eu" src="imagens/eu.jpg" alt="">
+        <h4>BEM-VINDO AO</h4>
+    </div>
     <script>
 
         function clickMenu(){
