--- a/site/index.html
+++ b/site/index.html
@@ -29,6 +29,7 @@
     <div id="segunda">
         <img id="eu" src="imagens/eu.jpg" alt="">
         <h4>BEM-VINDO AO</h4>
+        <h1>NOVO AVANÇO DA SUA MARCA</h1>
     </div>
     <script>
 
